--- a/detials.html
+++ b/detials.html
@@ -41,7 +41,12 @@
     </div>
 
     <footer>
-        <p>حقوق النشر &copy; 2024 جميع الحقوق محفوظة</p>
+        <div class="footer-content">
+            <p>تم التصميم بواسطة Yasmeen</p>
+            <p>البراند: بايدي وغزلي</p>
+            <p>رقم الهاتف: 0123456789</p>
+            <p>انضم إلى <a href="https://m.me/yourmessengerlink" target="_blank" class="messenger-link">جروب ماسنجر</a></p>
+        </div>
     </footer>
 
     <script src="detials.js"></script>
