--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
         </nav>
       </div>
     </header>
-
+    <center>
+      <section class="banner">
+        <h2>اصنعي البهجة بلمسة يدوية ✨</h2>
+      </section>
+    </center>
     <section id="products">
       <h2>منتجاتنا</h2>
-      <center>
-        <section class="banner">
-          <h2>اصنعي البهجة بلمسة يدوية ✨</h2>
-        </section>
-      </center>
-
       <div class="product-grid">
         <div class="product-card">
           <img src="img/3تقي.jpg" alt="طارة جميلة 1" />
@@ -68,24 +66,24 @@
       </p>
     </section>
     <section id="contact" class="contact-section">
-  <h2>تواصل معنا</h2>
-  <p>يمكنك التواصل معنا عبر:</p>
-  <ul>
-    <li>📞 رقم الهاتف: 0123456789</li>
-    <li>
-      💬 ماسنجر:
-      <a href="https://m.me/yourmessengerlink" target="_blank">اضغط هنا للانضمام</a>
-    </li>
-  </ul>
-</section>
+      <h2>تواصل معنا</h2>
+      <p>يمكنك التواصل معنا عبر:</p>
+      <ul>
+        <li>📞 رقم الهاتف: 0123456789</li>
+        <li>
+          💬 ماسنجر:
+          <a href="https://m.me/yourmessengerlink" target="_blank"
+            >اضغط هنا للانضمام</a
+          >
+        </li>
+      </ul>
+    </section>
 
-
-   <footer>
-  <div class="footer-content">
-    <p>تم التصميم بواسطة Yasmeen</p>
-    <p>البراند: بإيدي وغزلي</p>
-  </div>
-</footer>
-
+    <footer>
+      <div class="footer-content">
+        <p>تم التصميم بواسطة Yasmeen</p>
+        <p>البراند: بإيدي وغزلي</p>
+      </div>
+    </footer>
   </body>
 </html>
