--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h3>طارة جميلة 1</h3>
           <p>وصف مختصر للعمل اليدوي الأول.</p>
           <span>180 جنيه</span>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_1.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
