--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
       <div class="header-container">
         <div class="logo">
-          <h1>بإيدي وغزلي</h1>
+          <h1 style="align-content: center">بإيدي وغزلي</h1>
           <p>منتجات يدوية بكل حب واهتمام</p>
         </div>
         <nav>
-          <a href="#products">منتجاتنا</a>
+          <a href="#products">أعمالنا</a>
           <a href="#about">من نحن</a>
           <a href="#contact">تواصل معنا</a>
         </nav>
@@ -30,7 +30,9 @@
       </section>
     </center>
     <section id="products">
-      <h2>منتجاتنا</h2>
+      <h2>أعمالنا</h2>
+
+      <!-- الصف الأول -->
       <div class="product-grid">
         <div class="product-card">
           <img src="img/3تقي.jpg" alt="طارة جميلة 1" />
@@ -56,6 +58,88 @@
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
+
+      <!-- الصف الثاني -->
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="img/مريم_2.jpg" alt="طارة جميلة 4" />
+          <h3>طارة جميلة 4</h3>
+          <p>وصف مختصر للعمل اليدوي الرابع.</p>
+          <span>210 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+
+        <div class="product-card">
+          <img src="img/مسك_2.jpg" alt="طارة جميلة 5" />
+          <h3>طارة جميلة 5</h3>
+          <p>وصف مختصر للعمل اليدوي الخامس.</p>
+          <span>190 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+
+        <div class="product-card">
+          <img src="img/منديل_2.jpg" alt="طارة جميلة 6" />
+          <h3>طارة جميلة 6</h3>
+          <p>وصف مختصر للعمل اليدوي السادس.</p>
+          <span>250 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+      </div>
+
+      <!-- الصف الثالث -->
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="img/ميرال_1.jpg" alt="طارة جميلة 4" />
+          <h3>طارة جميلة 4</h3>
+          <p>وصف مختصر للعمل اليدوي الرابع.</p>
+          <span>210 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+
+        <div class="product-card">
+          <img src="img/يحيى_1.jpg" alt="طارة جميلة 5" />
+          <h3>طارة جميلة 5</h3>
+          <p>وصف مختصر للعمل اليدوي الخامس.</p>
+          <span>190 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+
+        <div class="product-card">
+          <img src="img/زينب_1.jpg" alt="طارة جميلة 6" />
+          <h3>طارة جميلة 6</h3>
+          <p>وصف مختصر للعمل اليدوي السادس.</p>
+          <span>250 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+      </div>
+
+      <!-- الصف الرابع -->
+       <div class="product-grid">
+        <div class="product-card">
+          <img src="img/فاطمة_1.jpg" alt="طارة جميلة 4" />
+          <h3>طارة جميلة 4</h3>
+          <p>وصف مختصر للعمل اليدوي الرابع.</p>
+          <span>210 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+
+        <div class="product-card">
+          <img src="img/محمد_1.jpg" alt="طارة جميلة 5" />
+          <h3>طارة جميلة 5</h3>
+          <p>وصف مختصر للعمل اليدوي الخامس.</p>
+          <span>190 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+
+        <div class="product-card">
+          <img src="img/زينب_1.jpg" alt="طارة جميلة 6" />
+          <h3>طارة جميلة 6</h3>
+          <p>وصف مختصر للعمل اليدوي السادس.</p>
+          <span>250 جنيه</span>
+          <a href="details.html" class="product-button">عرض التفاصيل</a>
+        </div>
+      </div>
+
     </section>
 
     <section id="about">
@@ -69,10 +153,12 @@
       <h2>تواصل معنا</h2>
       <p>يمكنك التواصل معنا عبر:</p>
       <ul>
-        <li>📞 رقم الهاتف: 0123456789</li>
+        <li>📞 رقم الهاتف: 01040614674</li>
         <li>
           💬 ماسنجر:
-          <a href="https://m.me/yourmessengerlink" target="_blank"
+          <a
+            href="https://www.facebook.com/share/16nR5XCySc/?mibextid=qi2Omg"
+            target="_blank"
             >اضغط هنا للانضمام</a
           >
         </li>
