--- a/detials_3.html
+++ b/detials_3.html
@@ -17,18 +17,22 @@
       <section class="details-content">
         <div class="image-carousel">
           <div class="main-image">
-            <img id="currentImage" src="img/3تقي.jpg" alt="صورة المنتج" />
+            <img id="currentImage" src="img/زين1.jpg" alt="صورة المنتج" />
           </div>
           <div class="thumbnail-images">
-            <img src="img/3تقي.jpg" alt="صورة المنتج 1" class="thumb active" />
-            <img src="img/1تقي.jpg" alt="صورة المنتج 2" class="thumb" />
-            <img src="img/4تقي.jpg" alt="صورة المنتج 3" class="thumb" />
-            <img src="img/تقي2.jpg" alt="صورة المنتج 4" class="thumb" />
+            <img
+              src="img/زين1.jpg"
+              alt="صورة المنتج 1"
+              class="thumb active"
+      />
+            <img src="img/زين3.jpg" alt="صورة المنتج 2" class="thumb" />
+            <img src="img/زين2.jpg" alt="صورة المنتج 3" class="thumb" />
+            <img src="img//زين4.jpg" alt="صورة المنتج 4" class="thumb" />
           </div>
         </div>
 
         <div class="details-info">
-         <p><strong>المقاس: </strong> 15 سم</p>
+          <p><strong>المقاس: </strong> 15 سم</p>
           <p><strong>السعر:</strong> من 160 إلى 180 جنيه</p>
         </div>
       </section>
@@ -39,7 +43,7 @@
       <img id="modalImage" src="" alt="صورة مكبرة" />
     </div>
 
-   <footer>
+    <footer>
       <div class="footer-content">
         <p>تم التصميم بواسطة Yasmeen</p>
         <p>البراند: بإيدي وغزلي</p>
