--- a/index.html
+++ b/index.html
@@ -36,26 +36,20 @@
       <div class="product-grid">
         <div class="product-card">
           <img src="img/3تقي.jpg" alt="طارة جميلة 1" />
-          <h3>طارة جميلة 1</h3>
-          <p>وصف مختصر للعمل اليدوي الأول.</p>
-          <span>180 جنيه</span>
+          <h3>طارة تقي 🎀</h3>
           <a href="detials_1.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/دكتور3.jpg" alt="طارة جميلة 2" />
-          <h3>طارة جميلة 2</h3>
-          <p>وصف مختصر للعمل اليدوي الثاني.</p>
-          <span>200 جنيه</span>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <h3>طارة دكتور 🩺</h3>
+          <a href="detials_2.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/زين1.jpg" alt="طارة جميلة 3" />
-          <h3>طارة جميلة 3</h3>
-          <p>وصف مختصر للعمل اليدوي الثالث.</p>
-          <span>230 جنيه</span>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <h3>طارة زين 🌹</h3>
+          <a href="detials_3.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
 
@@ -63,25 +57,19 @@
       <div class="product-grid">
         <div class="product-card">
           <img src="img/مريم_2.jpg" alt="طارة جميلة 4" />
-          <h3>طارة جميلة 4</h3>
-          <p>وصف مختصر للعمل اليدوي الرابع.</p>
-          <span>210 جنيه</span>
+          <h3>طارة مريم 🎗</h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/مسك_2.jpg" alt="طارة جميلة 5" />
-          <h3>طارة جميلة 5</h3>
-          <p>وصف مختصر للعمل اليدوي الخامس.</p>
-          <span>190 جنيه</span>
+          <h3>طارة مسك 🌘</h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/منديل_2.jpg" alt="طارة جميلة 6" />
-          <h3>طارة جميلة 6</h3>
-          <p>وصف مختصر للعمل اليدوي السادس.</p>
-          <span>250 جنيه</span>
+          <h3>منديل كتب كتاب 👸</h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
@@ -90,25 +78,19 @@
       <div class="product-grid">
         <div class="product-card">
           <img src="img/ميرال_1.jpg" alt="طارة جميلة 4" />
-          <h3>طارة جميلة 4</h3>
-          <p>وصف مختصر للعمل اليدوي الرابع.</p>
-          <span>210 جنيه</span>
+          <h3>طارة ميرال </h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/يحيى_1.jpg" alt="طارة جميلة 5" />
-          <h3>طارة جميلة 5</h3>
-          <p>وصف مختصر للعمل اليدوي الخامس.</p>
-          <span>190 جنيه</span>
+          <h3>طارة يجيى </h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/زينب_1.jpg" alt="طارة جميلة 6" />
-          <h3>طارة جميلة 6</h3>
-          <p>وصف مختصر للعمل اليدوي السادس.</p>
-          <span>250 جنيه</span>
+          <h3>طارة زينب </h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
@@ -117,22 +99,23 @@
        <div class="product-grid">
         <div class="product-card">
           <img src="img/فاطمة_1.jpg" alt="طارة جميلة 4" />
-          <h3>طارة جميلة 4</h3>
-          <p>وصف مختصر للعمل اليدوي الرابع.</p>
-          <span>210 جنيه</span>
+          <h3>طارة فاطمة </h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/محمد_1.jpg" alt="طارة جميلة 5" />
-          <h3>طارة جميلة 5</h3>
-          <p>وصف مختصر للعمل اليدوي الخامس.</p>
-          <span>190 جنيه</span>
+          <h3>طارة محمد </h3>
           <a href="details.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
 
     </section>
+
+    <div class="scroll-buttons">
+      <button id="scrollTopBtn" aria-label="Scroll to top">&#9650;</button>
+      <button id="scrollBottomBtn" aria-label="Scroll to bottom">&#9660;</button>
+    </div>
 
     <section id="about">
       <h2>من نحن</h2>
@@ -162,6 +145,19 @@
         <p>تم التصميم بواسطة Yasmeen</p>
         <p>البراند: بإيدي وغزلي</p>
       </div>
-    </footer>
+  </footer>
+  <script>document.addEventListener('DOMContentLoaded', function () {
+  const scrollTopBtn = document.getElementById('scrollTopBtn');
+  const scrollBottomBtn = document.getElementById('scrollBottomBtn');
+
+  scrollTopBtn.addEventListener('click', () => {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  });
+
+  scrollBottomBtn.addEventListener('click', () => {
+    window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
+  });
+});
+</script>
   </body>
 </html>
