--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <div class="product-card">
           <img src="img/مريم_2.jpg" alt="طارة جميلة 4" />
           <h3>طارة مريم 🎗</h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_4.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/مسك_2.jpg" alt="طارة جميلة 5" />
           <h3>طارة مسك 🌘</h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_5.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
