--- a/detials_4.html
+++ b/detials_4.html
@@ -17,23 +17,22 @@
       <section class="details-content">
         <div class="image-carousel">
           <div class="main-image">
-            <img id="currentImage" src="img/زين1.jpg" alt="صورة المنتج" />
+            <img id="currentImage" src="img/مريم_2.jpg" alt="صورة المنتج" />
           </div>
           <div class="thumbnail-images">
             <img
-              src="img/زين1.jpg"
+              src="img/مريم_2.jpg"
               alt="صورة المنتج 1"
               class="thumb active"
       />
-            <img src="img/زين3.jpg" alt="صورة المنتج 2" class="thumb" />
-            <img src="img/زين2.jpg" alt="صورة المنتج 3" class="thumb" />
-            <img src="img//زين4.jpg" alt="صورة المنتج 4" class="thumb" />
+            <img src="img/مريم_1.jpg" alt="صورة المنتج 2" class="thumb" />
+            <img src="img/مريم_3.jpg" alt="صورة المنتج 3" class="thumb" />
           </div>
         </div>
 
         <div class="details-info">
-          <p><strong>المقاس: </strong> 15 سم</p>
-          <p><strong>السعر:</strong> من 175 إلى 200 جنيه</p>
+          <p><strong>المقاس: </strong> 10 سم</p>
+          <p><strong>السعر:</strong> من 95 إلى 120 جنيه</p>
         </div>
       </section>
     </main>
