--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="product-card">
           <img src="img/منديل_2.jpg" alt="طارة جميلة 6" />
           <h3>منديل كتب كتاب 👸</h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_6.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
 
@@ -79,19 +79,19 @@
         <div class="product-card">
           <img src="img/ميرال_1.jpg" alt="طارة جميلة 4" />
           <h3>طارة ميرال </h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_8.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/يحيى_1.jpg" alt="طارة جميلة 5" />
           <h3>طارة يجيى </h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_7.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/زينب_1.jpg" alt="طارة جميلة 6" />
           <h3>طارة زينب </h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_11.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
 
@@ -100,13 +100,13 @@
         <div class="product-card">
           <img src="img/فاطمة_1.jpg" alt="طارة جميلة 4" />
           <h3>طارة فاطمة </h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_9.html" class="product-button">عرض التفاصيل</a>
         </div>
 
         <div class="product-card">
           <img src="img/محمد_1.jpg" alt="طارة جميلة 5" />
           <h3>طارة محمد </h3>
-          <a href="details.html" class="product-button">عرض التفاصيل</a>
+          <a href="detials_10.html" class="product-button">عرض التفاصيل</a>
         </div>
       </div>
 
