--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <p>منتجات يدوية بكل حب واهتمام</p>
         </div>
         <nav>
-          <a href="#products">أعمالنا</a>
-          <a href="#about">من نحن</a>
-          <a href="#contact">تواصل معنا</a>
+          <a href="#products"><i class="fas fa-palette"></i> أعمالنا</a>
+          <a href="#about"><i class="fas fa-heart"></i> من نحن</a>
+          <a href="#contact"><i class="fas fa-envelope"></i> تواصل معنا</a>
         </nav>
       </div>
     </header>
@@ -147,8 +147,23 @@
 
     <footer>
       <div class="footer-content">
-        <p>تم التصميم بواسطة Yasmeen</p>
-        <p>البراند: بإيدي وغزلي</p>
+        <div class="footer-section">
+          <h3><i class="fas fa-info-circle"></i> عن المشروع</h3>
+          <p>منتجات يدوية بكل حب واهتمام</p>
+        </div>
+        <div class="footer-section">
+          <h3><i class="fas fa-phone"></i> تواصل</h3>
+          <p>📞 01040614674</p>
+          <a
+            href="https://www.facebook.com/share/16nR5XCySc/?mibextid=qi2Omg"
+            target="_blank"
+            ><i class="fab fa-facebook-messenger"></i> ماسنجر</a
+          >
+        </div>
+        <div class="footer-section">
+          <h3><i class="fas fa-code"></i> المطور</h3>
+          <p>تم التصميم بواسطة Yasmeen</p>
+        </div>
       </div>
     </footer>
     <script>
