--- a/index.html
+++ b/index.html
@@ -181,6 +181,19 @@
             behavior: "smooth",
           });
         });
+
+        // Smooth scroll for nav links
+        const navLinks = document.querySelectorAll('nav a[href^="#"]');
+        navLinks.forEach((link) => {
+          link.addEventListener("click", function (e) {
+            e.preventDefault();
+            const targetId = this.getAttribute("href");
+            const targetSection = document.querySelector(targetId);
+            if (targetSection) {
+              targetSection.scrollIntoView({ behavior: "smooth" });
+            }
+          });
+        });
       });
     </script>
   </body>
