--- a/detials_1.html
+++ b/detials_1.html
@@ -28,8 +28,11 @@
         </div>
 
         <div class="details-info">
-         <p><strong>المقاس: </strong> 15 سم</p>
+          <p><strong>المقاس: </strong> 15 سم</p>
           <p><strong>السعر:</strong> من 160 إلى 180 جنيه</p>
+          <a href="index.html" class="back-button"
+            >العودة إلى الصفحة الرئيسية</a
+          >
         </div>
       </section>
     </main>
@@ -39,7 +42,7 @@
       <img id="modalImage" src="" alt="صورة مكبرة" />
     </div>
 
-   <footer>
+    <footer>
       <div class="footer-content">
         <p>تم التصميم بواسطة Yasmeen</p>
         <p>البراند: بإيدي وغزلي</p>
